@@ -18,36 +18,31 @@
 	<script>
 FBL.ns(function() { with (FBL) {
 
-		top.FirePHP.initialize();
+	top.FirePHP.initialize();
 				
 }});
 	</script>
 
 
-    <commandset id="mainCommandSet">
-        <command id="cmd_openFirephpPermissions" oncommand="FirePHP.openPermissions()"/>
-    </commandset>
-
-
     <menupopup id="menu_ToolsPopup">
         <menu id="menu_firephp" class="menuitem-iconic" image="chrome://firephp/skin/FirePHP_16.png"
               label="FirePHP" insertafter="menu_firebug">
-            <menupopup onpopupshowing="return FirePHP.onOptionsShowing(this);">
+            <menupopup onpopupshowing="return Firebug.FirePHP.onOptionsShowing(this);">
 		
-			        <menuitem label="Welcome Page" oncommand="FirePHP.visitWebsite('welcome')"/>
+			        <menuitem label="FirePHP Headquarters" oncommand="Firebug.FirePHP.visitWebsite('hq')"/>
 			        <menuseparator/>
 	            <menuitem type="checkbox" label="FirePHP Enabled"
-	                       oncommand="FirePHP.onToggleOption(this)"
+	                       oncommand="Firebug.FirePHP.onToggleOption(this)"
 	                       option="enabled"/>
 			        <menuseparator/>
-	            <menuitem label="Allowed Sites..." command="cmd_openFirephpPermissions"/>
+	            <menuitem label="Allowed Sites..." oncommand="Firebug.FirePHP.openPermissions()"/>
 			        <menuseparator/>
-			        <menuitem label="FirePHP Website" oncommand="FirePHP.visitWebsite('main')"/>
-			        <menuitem label="Documentation" oncommand="FirePHP.visitWebsite('docs')"/>
-			        <menuitem label="Forums / Help" oncommand="FirePHP.visitWebsite('discuss')"/>
-			        <menuitem label="Issues Tracker" oncommand="FirePHP.visitWebsite('issues')"/>
+			        <menuitem label="FirePHP Website" oncommand="Firebug.FirePHP.visitWebsite('main')"/>
+			        <menuitem label="Documentation" oncommand="Firebug.FirePHP.visitWebsite('docs')"/>
+			        <menuitem label="Forums / Help" oncommand="Firebug.FirePHP.visitWebsite('discuss')"/>
+			        <menuitem label="Issues Tracker" oncommand="Firebug.FirePHP.visitWebsite('issues')"/>
 			        <menuseparator/>
-			        <menuitem id="Firebug_About" label="About" oncommand="FirePHP.openAboutDialog()"/>
+			        <menuitem id="Firebug_About" label="About" oncommand="Firebug.FirePHP.openAboutDialog()"/>
             </menupopup>
         </menu>
     </menupopup>
@@ -57,22 +52,22 @@ FBL.ns(function() { with (FBL) {
 
         <toolbarbutton id="firephpMenu" type="menu" insertafter="fbFirebugMenu">
             
-	        <menupopup id="firephpMenuPopup" onpopupshowing="return FirePHP.onOptionsShowing(this);">
+	        <menupopup id="firephpMenuPopup" onpopupshowing="return Firebug.FirePHP.onOptionsShowing(this);">
             
-		        <menuitem class="firephpMenuWelcomeItem" label="Welcome Page" oncommand="FirePHP.visitWebsite('welcome')"/>
+		        <menuitem class="firephpMenuWelcomeItem" label="FirePHP Headquarters" oncommand="Firebug.FirePHP.visitWebsite('hq')"/>
 		        <menuseparator/>
             <menuitem type="checkbox" label="FirePHP Enabled"
-                       oncommand="FirePHP.onToggleOption(this)"
+                       oncommand="Firebug.FirePHP.onToggleOption(this)"
                        option="enabled"/>
 		        <menuseparator/>
-            <menuitem label="Allowed Sites..." command="cmd_openFirephpPermissions"/>
+            <menuitem label="Allowed Sites..." oncommand="Firebug.FirePHP.openPermissions()"/>
 		        <menuseparator/>
-		        <menuitem label="FirePHP Website" oncommand="FirePHP.visitWebsite('main')"/>
-		        <menuitem label="Documentation" oncommand="FirePHP.visitWebsite('docs')"/>
-		        <menuitem label="Forums / Help" oncommand="FirePHP.visitWebsite('discuss')"/>
-		        <menuitem label="Issues Tracker" oncommand="FirePHP.visitWebsite('issues')"/>
+		        <menuitem label="FirePHP Website" oncommand="Firebug.FirePHP.visitWebsite('main')"/>
+		        <menuitem label="Documentation" oncommand="Firebug.FirePHP.visitWebsite('docs')"/>
+		        <menuitem label="Forums / Help" oncommand="Firebug.FirePHP.visitWebsite('discuss')"/>
+		        <menuitem label="Issues Tracker" oncommand="Firebug.FirePHP.visitWebsite('issues')"/>
 		        <menuseparator/>
-		        <menuitem id="Firebug_About" label="About" oncommand="FirePHP.openAboutDialog()"/>
+		        <menuitem id="Firebug_About" label="About" oncommand="Firebug.FirePHP.openAboutDialog()"/>
   				
   				</menupopup>
             
